# trailmind

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude/: loop.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ci-workflow.yml  github-workflow.md  migration-guide.md  planning-workflow.md  release-checklist.md  v0.2-project-automation.md  v0.3-agent-handoff.md  v0.4-plan-breakdown.md  v0.4-planning-artifacts.md  v1.0-migration-policy.md
examples/demo_project/: README.md  overview.html  roster.yaml
src/trailmind/: __main__.py  activity.py  agents.py  cli.py  dashboard.py  doctor.py  entity_io.py  epic.py  errors.py  export.py  gitops.py  ids.py  (+23 more)
tests/: test_activity.py  test_cli_errors.py  test_dashboard.py  test_doctor.py  test_entity_io.py  test_export.py  test_gitops.py  test_ids.py  test_import.py  test_inbox_sweep.py  test_init.py  test_issue_clone.py  test_issue_edit.py  test_issue_list_filter.py  test_issue_management.py  test_issue_milestone_log.py  test_issue_move.py  test_list_groupby.py  test_list_project_filter.py  test_list_sort.py  test_milestone_inbox_edit.py  test_pickup.py  test_plan_artifact.py  test_plan_breakdown.py  test_project_epic.py  test_project_epic_edit.py  test_project_epic_show.py  test_reopen.py  test_resolver.py  test_roster.py  test_search.py  test_security_scan.py  test_serve_index.py  test_show.py  test_state_management.py  test_stats.py  test_task.py  test_task_assign.py  test_task_clone.py  test_task_deliverables.py  (+11 more)
(+32 files in other folders)
